--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         .container {
             height: 620px;
             display: flex;
-            align-items: center; /* 자식 요소를 세로(수직) 기준으로 가운데 정렬시킴 */
+            align-items: center;
         }   
         .image {
             width: 500px;
