--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>thsd&#46;kr</title>
+    <meta name="author" content="Jimin Cheon">
     <meta property="og:title" content="thsd.kr">
     <meta property="og:description" content="thsd.kr is coming soon. But try the preview menu">
     <meta property="og:type" content="article">
     <meta property="og:image" content="og-img-cs.png">
-    <meta name="author" content="Jimin Cheon"
+    <link rel="icon" href="favicon.svg"/>
+    <link rel="apple-touch-icon" href="favicon.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
