--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta property="og:description" content="thsd.kr is coming soon. But try the preview menu">
     <meta property="og:type" content="article">
     <meta property="og:image" content="og-img-cs.png">
-    <link rel="icon" href="favicon.svg"/>
-    <link rel="apple-touch-icon" href="favicon.svg"/>
+    <link rel="icon" href="favicon.png"/>
+    <link rel="apple-touch-icon" href="favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
