--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta property="og:title" content="thsd.kr">
     <meta property="og:description" content="thsd.kr is coming soon. But try the preview menu">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="og-img-cs.png">
-    <link rel="icon" href="favicon.png"/>
-    <link rel="apple-touch-icon" href="favicon.png"/>
+    <meta property="og:image" content="image/og-img-cs.png">
+    <link rel="icon" href="image/favicon.png"/>
+    <link rel="apple-touch-icon" href="image/favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
@@ -131,7 +131,7 @@
 <meta http-equiv="refresh" content="2; url=https://thsd.framer.website"></meta>
 <body>
         <div class="container">
-            <img class="image" src="thsd.kr-logo.svg">
+            <img class="image" src="image/thsd.kr-logo.svg">
         </div>
         <div class="box">
 			<div class="loader10">
