--- a/cloud/index.html
+++ b/cloud/index.html
@@ -1,1 +1,34 @@
-html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>thsdCLOUD</title>
+    <meta name="author" content="Jimin Cheon">
+    <meta property="og:title" content="thsdCLOUD">
+    <meta property="og:description" content="This website is a private server of thsd">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="/cloud/image/og-img.png">
+    <link rel="icon" href="/cloud/image/favicon.png"/>
+    <link rel="apple-touch-icon" href="/cloud/image/favicon.png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <style>
+	      h1 {
+			      font-family: "Krona One", sans-serif;
+            font-style: normal;
+            font-size: 18px;
+            letter-spacing: -0.7px;
+            color: #080808;
+            text-align: center;
+            position: fixed;
+            top: 50%;
+            width: 100%;
+		       }
+</head>
+<meta http-equiv="refresh" content="2; url=https://<!--SERVER IP-->"></meta>
+<body>
+        <h1>&#169; 2024 thsd&#46; All Rights Reserved&#46;</h1>
+</body>
+</html>
