--- a/cloud/index.html
+++ b/cloud/index.html
@@ -15,17 +15,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
     <style>
-	      h1 {
+	h1 {
 			      font-family: "Krona One", sans-serif;
             font-style: normal;
-            font-size: 18px;
+            font-size: 30px;
             letter-spacing: -0.7px;
             color: #080808;
             text-align: center;
             position: fixed;
-            top: 50%;
+            top: 80%;
             width: 100%;
 		       }
+    </style>
 </head>
 <meta http-equiv="refresh" content="2; url=https://<!--SERVER IP-->"></meta>
 <body>
